...
        android:layout_margin="15dp"
        android:hint="Key word for search ">

    </EditText>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_id"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:checked="false"
...

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_boxes_layout"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:text="Search" />
...
